<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>testing-all</artifactId>
        <groupId>com.test</groupId>
        <version>1.0.0</version>
    </parent>
    <packaging>pom</packaging>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>middle-ware</artifactId>

    <properties>
        <maven.compiler.source>16</maven.compiler.source>
        <maven.compiler.target>16</maven.compiler.target>
    </properties>

    <modules>
        <module>es</module>
        <module>mongo</module>
        <module>rabbitmq</module>
        <module>redis</module>
        <module>twilio</module>
        <module>kafka</module>
    </modules>

</project>